<resources>
    <string name="app_name">Loja</string>
    <string name="menu">Menu</string>

    <string name="lista_veiculo">Lista de Veículos</string>
    <string name="cad_veiculo">Veículos</string>

    <string name="btn_cad">Cadastrar ...</string>
    <string name="btn_gravar">Gravar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_pesq">Pesquisar</string>

    <string name="codigo">Código</string>
    <string name="nome">Nome</string>
    <string name="fone">Fone</string>
    <string name="email">Email</string>
    <string name="obs">Observação</string>
    <string name="custo">Custo</string>
    <string name="preco">Preço Venda</string>
    <string name="und">Unidade</string>
    <string name="qtde">Quantidade</string>

    <string name="placa">Placa</string>
    <string name="modelo_ano">Modelo/Ano</string>
    <string name="btn_cad_veiculo">Cadastrar Veículo</string>
    <string name="telefone">Telefone</string>
    <string-array name="status_options">
        <item>🟡 Diagnóstico em Andamento</item>
        <item>🟢 Aguardando Autorização</item>
        <item>🟢 Aguardando Peças</item>
        <item>🟢 Em Processo de Reparo</item>
        <item>🔴 Atraso na Entrega</item>
        <item>🔴 Reparo Não Autorizado</item>
        <item>🔴 Peças Indisponíveis</item>
        <item>🟠 Reparo Adicional Necessário</item>
        <item>🔵 Veículo em Teste</item>
        <item>🟢 Veículo pronto</item>
    </string-array>
</resources>
