<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    tools:context=".AtvCadVeiculo">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#FF0000"
        android:text="Cadastro Veiculo"
        android:gravity="center"
        android:textColor="#FFFFFF" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="539dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <!-- Outros elementos e campos de texto -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/codigo" />

            <EditText
                android:id="@+id/edtCodigo"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placa" />

            <EditText
                android:id="@+id/edtPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelo_ano" />

            <EditText
                android:id="@+id/edtModeloAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obs" />

            <EditText
                android:id="@+id/edtObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="3" />

            <!-- Adicione outros elementos conforme necessário -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/btn_voltar"
            app:icon="@drawable/voltar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/btn_excluir" />

        <Button
            android:id="@+id/btnGravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/btn_gravar" />

    </LinearLayout>
</LinearLayout>
